# qdrant_vs_s3_code

./: .gitignore  README.md  docker-compose.yml  final_report.md  presentation.md  pyproject.toml  run.py  run_all.py  setup.py  test.ipynb
core/: clients.py  config.py  dataset.py  display.py  embeddings.py
docs/: Query_api_details.md  distance_metrics.md  limitation.md  metadata.md  qdrant_official_docs_url.md  quotas_limits.md  s3 vector_official_docs_urls.md  supported_data_types.md  vector_index.md
path/to/data/: raft_state.json
tests/: test_01_semantic_search.py  test_02_filter_exact_match.py  test_03_filter_numeric_range.py  test_04_filter_combined_and.py  test_05_filter_or.py  test_06_filter_negation.py  test_07_filter_set_membership.py  test_08_insert_batch.py  test_09_get_by_id.py  test_10_update_metadata.py  test_11_delete.py  test_12_hybrid_search.py  test_13_recommendation.py  test_14_scroll_paginate.py  test_15_fulltext_match.py  test_16_geo_filter.py  test_17_grouping.py  test_18_named_vectors.py  test_19_zero_setup.py  test_20_iam_auth.py  test_21_bedrock_integration.py  test_22_topk_limit.py  test_23_consistency.py  test_24_batch_limits.py  test_25_scale_constraints.py
