[project]
name = "s3-vs-qdrant"
version = "0.1.0"
description = "Side-by-side comparison of Amazon S3 Vectors and Qdrant vector databases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.54",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
]
